--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
     "@types/react-redux": "^7.1.11",
     "@types/react-router-dom": "^5.1.5",
     "@types/uuid": "^8.3.0",
+    "axios": "^0.21.0",
+    "axios-typescript": "^1.0.2",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "react-redux": "^7.2.2",
