--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "social_network",
-  "deploy-page": "https://MariaSyrokvash.github.io/social_network",
+  "homepage": "https://MariaSyrokvash.github.io/social_network",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
@@ -53,5 +53,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "gh-pages": "^3.1.0"
   }
 }
